@@ -862,9 +862,9 @@ PORT mcs51_port =
     getRegsRead,
     getRegsWritten,
     mcs51DeadMove,
+    mcs51notUsed,
     NULL,
-    NULL,
-    NULL,
+    mcs51notUsedFrom,
     NULL,
     NULL,
     NULL,
